atualizacao de buttons

--- a/index.html
+++ b/index.html
@@ -249,10 +249,13 @@
               <p style="color: white; font-size: 27px; font-weight: bold;">JÁ É CLIENTE  <span style="color: #031133;">CONECTMAX?</span> 
               <p style="color: white; font-size: 20px; font-weight: bold;">ACESSE A CENTRAL DO ASSINANTE</p>   
               <div class="text-center text-lg-start">
-                <a href="hhttps://ixc.conectmax.com.br/central_assinante_web/" class="btn-read-more d-inline-flex align-items-center justify-content-center align-self-center" style="background-color:  #031133;">
-                  <span>Central do Assinante</span>
-                  <i class="bi bi-arrow-right"></i>
-                </a>
+                   <header class="section-header" style="margin-top: 80px;">
+                       <a href="https://api.whatsapp.com/send/?phone=5514997348607&type=phone_number&app_absent=0&fbclid=PAZXh0bgNhZW0CMTEAAaZ4ZLMSzm8w7nnD1P0_ysQSWJLsf6jJOFFS5Rms2EvjNi3WssgOxWJUP-M_aem_cU1mie6Sq-CgyKOrMjMVBw" id="whatsapp" class="btn  d-inline-flex align-items-center justify-content-center align-self-center" style="background-color:#031133; color: white; margin-top: 40px;">
+  <span>Central do Assinante</span>
+  <i class="bi bi-arrow-right" style="margin-left: 20px;"></i>
+  
+</a>
+</header>
               </div>
             </div>
           </div>
@@ -281,10 +284,14 @@
               <p style="color: white;">ConectMax Internet Fibra, empresa 100% Duartinense, Gerando Empregos Diretos e Indiretos, Levando Alternativa Viável de Conexão Banda Larga, Surgiu em 1994  e tem como Principio atender as Necessidades do Mercado Regional e as Necessidades de cada um de seus clientes com diversos planos  de Velocidade. </P>
               <p style="color: white;">Hoje em Virtude da Demanda por um serviço de qualidade  e atendimento diferenciado, a ConectMax veem ampliando sua área de atuação levando Internet Fibra  para Duartina, Lucianópolis e Ubirajara ( ate Areia Branca), com Projetos de seguir expandindo com mais pontos na Região.</P>   
               <div class="text-center text-lg-start">
-                <a href="https://api.whatsapp.com/send/?phone=5514997348607&type=phone_number&app_absent=0&fbclid=PAZXh0bgNhZW0CMTEAAaZ4ZLMSzm8w7nnD1P0_ysQSWJLsf6jJOFFS5Rms2EvjNi3WssgOxWJUP-M_aem_cU1mie6Sq-CgyKOrMjMVBw" class="btn-read-more d-inline-flex align-items-center justify-content-center align-self-center" style="background-color: #ffa500; ">
-                  <span>ENTRAR EM CONTATO</span>
-                  <i class="bi bi-arrow-right"></i>
-                </a>
+                <header class="section-header" style="margin-top: 80px;">
+                                         <a href="https://api.whatsapp.com/send/?phone=5514997348607&type=phone_number&app_absent=0&fbclid=PAZXh0bgNhZW0CMTEAAaZ4ZLMSzm8w7nnD1P0_ysQSWJLsf6jJOFFS5Rms2EvjNi3WssgOxWJUP-M_aem_cU1mie6Sq-CgyKOrMjMVBw" id="whatsapp" class="btn  d-inline-flex align-items-center justify-content-center align-self-center" style="background-color:#ffa500; color: white; margin-top: 40px;">
+  <span>ENTRAR EM CONTATO</span>
+  <i class="bi bi-arrow-right" style="margin-left: 20px;"></i>
+  
+</a>
+
+                </header>
               </div>
             </div>
           </div>
