Alteracao url central do assianate

--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
               <p style="color: white; font-size: 20px; font-weight: bold;">ACESSE A CENTRAL DO ASSINANTE</p>   
               <div class="text-center text-lg-start">
                    <header class="section-header" style="margin-top: 80px;">
-                       <a href="https://api.whatsapp.com/send/?phone=5514997348607&type=phone_number&app_absent=0&fbclid=PAZXh0bgNhZW0CMTEAAaZ4ZLMSzm8w7nnD1P0_ysQSWJLsf6jJOFFS5Rms2EvjNi3WssgOxWJUP-M_aem_cU1mie6Sq-CgyKOrMjMVBw" id="whatsapp" class="btn  d-inline-flex align-items-center justify-content-center align-self-center" style="background-color:#031133; color: white; margin-top: 40px;">
+                       <a href="https://ixc.conectmax.com.br/central_assinante_web/" id="whatsapp" class="btn  d-inline-flex align-items-center justify-content-center align-self-center" style="background-color:#031133; color: white; margin-top: 40px;">
   <span>Central do Assinante</span>
   <i class="bi bi-arrow-right" style="margin-left: 20px;"></i>
   
