--- a/index.html
+++ b/index.html
@@ -48,10 +48,10 @@
 
       <nav id="navbar" class="navbar">
         <ul>
-          <li><a class="nav-link scrollto active" href="#values" style="color: white;" >Planos</a></li>
-          <li><a class="nav-link scrollto" href="#about">Sobre</a></li>
-          <li><a class="nav-link scrollto" href="#contact" >Contato</a></li>
-          <li><a class="nav-link scrollto" href="https://ixc.conectmax.com.br/central_assinante_web/">Central do assinante</a></li>
+          <li><a class="nav-link scrollto active" href="#values" style="color: white; font-size: 24px ;" >Planos</a></li>
+          <li><a class="nav-link scrollto" href="#about" style="font-size: 24px;">Sobre</a></li>
+          <li><a class="nav-link scrollto" href="#contact" style="font-size: 24px;" >Contato</a></li>
+          <li><a class="nav-link scrollto" href="https://ixc.conectmax.com.br/central_assinante_web/" style="font-size: 24px;">Central do assinante</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle" style="color: white;"></i>
       </nav><!-- .navbar -->
@@ -65,7 +65,7 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-6 d-flex flex-column justify-content-center">
-          <h1 data-aos="fade-up" style="color: white;">A <span style="color: #ffa500;">MELHOR</span>   INTERNET FIBRA ÓTICA PARA DUARTNA e REGIÃO</h1>
+          <h1 data-aos="fade-up" style="color: white; font-size: 39px;">A <span style="color: #ffa500;">MELHOR</span>   INTERNET FIBRA ÓTICA PARA DUARTNA e REGIÃO</h1>
           <br>
           <div data-aos="fade-up" data-aos-delay="600">
             <div class="text-center text-lg-start">
@@ -91,7 +91,7 @@
       <div class="container" data-aos="fade-up">
 
         <header class="section-header">
-          <h1 style="color: #0b61af; font-weight: bold;">CONHEÇA NOSSOS <span style="color: #ffa500;">NOVOS <br> PLANOS</span>, INTERNET FIBRA RÁPIDA <br> COM QUALIDADE, QUE CABE NO <br> SEU BOLSO! </h1>
+          <h1 style="color: #0b61af; font-weight: bold;">CONHEÇA NOSSOS <span style="color: #ffa500;">NOVOS  PLANOS, <br></span>INTERNET FIBRA RÁPIDA  COM QUALIDADE,<br> QUE CABE NO  SEU BOLSO! </h1>
         </header>
 </section><!-- End Values Section -->
 
@@ -228,7 +228,12 @@
       </div>
 
              <header class="section-header" style="margin-top: 80px;">
-          <h1 style="color: #0b61af; font-weight: bold;">CONHEÇA  TAMBÉM O  <span style="color: #ffa500; font-weight: bold; ">PLANO </span> <br> IDEAL PARA SUA EMPRESA </h1>
+          <h1 style="color: #0b61af; font-weight: 1000;">
+    CONHEÇA TAMBÉM O  
+    <span style="color: #ffa500; font-weight: 1000;">PLANO</span> 
+    <br> 
+    IDEAL PARA SUA EMPRESA
+</h1>
         <a href="https://api.whatsapp.com/send/?phone=5514997348607&type=phone_number&app_absent=0&fbclid=PAZXh0bgNhZW0CMTEAAaZ4ZLMSzm8w7nnD1P0_ysQSWJLsf6jJOFFS5Rms2EvjNi3WssgOxWJUP-M_aem_cU1mie6Sq-CgyKOrMjMVBw" id="whatsapp" class="btn  d-inline-flex align-items-center justify-content-center align-self-center" style="background-color: #075e54; color: white; margin-top: 40px;">
   <span>Conversar no WhatsApp</span>
   <i class="bi bi-whatsapp" style="margin-left: 20px;"></i>
@@ -281,8 +286,8 @@
           <div class="col-lg-6 d-flex flex-column justify-content-center" data-aos="fade-up" data-aos-delay="200">
             <div class="content" style="background-color:#053b7e;">
                             <h3 style="color: WHITE; font-size: 32PX; font-weight: bold;">SOBRE</h3>
-              <p style="color: white;">ConectMax Internet Fibra, empresa 100% Duartinense, Gerando Empregos Diretos e Indiretos, Levando Alternativa Viável de Conexão Banda Larga, Surgiu em 1994  e tem como Principio atender as Necessidades do Mercado Regional e as Necessidades de cada um de seus clientes com diversos planos  de Velocidade. </P>
-              <p style="color: white;">Hoje em Virtude da Demanda por um serviço de qualidade  e atendimento diferenciado, a ConectMax veem ampliando sua área de atuação levando Internet Fibra  para Duartina, Lucianópolis e Ubirajara ( ate Areia Branca), com Projetos de seguir expandindo com mais pontos na Região.</P>   
+              <p style="color: white;">ConectMax Internet Fibra, empresa 100% duartinense, gerando empregos diretos e indiretos, oferecendo uma alternativa viável de conexão banda larga. Surgiu em 1994 e tem como princípio atender às necessidades do mercado regional e de cada um de seus clientes com diversos planos de velocidade.</P>
+              <p style="color: white;">Hoje, em virtude da demanda por um serviço de qualidade e atendimento diferenciado, a ConectMax vem ampliando sua área de atuação, levando internet fibra para Duartina, Lucianópolis e Ubirajara (até Areia Branca), com projetos de seguir expandindo com mais pontos na região.</P>   
               <div class="text-center text-lg-start">
                 <header class="section-header" style="margin-top: 80px;">
                                          <a href="https://api.whatsapp.com/send/?phone=5514997348607&type=phone_number&app_absent=0&fbclid=PAZXh0bgNhZW0CMTEAAaZ4ZLMSzm8w7nnD1P0_ysQSWJLsf6jJOFFS5Rms2EvjNi3WssgOxWJUP-M_aem_cU1mie6Sq-CgyKOrMjMVBw" id="whatsapp" class="btn  d-inline-flex align-items-center justify-content-center align-self-center" style="background-color:#ffa500; color: white; margin-top: 40px;">
@@ -347,7 +352,7 @@
             <div class="info-box" style="display: flex; align-items: center;">
                 <i class="bi bi-whatsapp"></i>
                 <a href="https://api.whatsapp.com/send/?phone=5514997348607&type=phone_number&app_absent=0&fbclid=PAZXh0bgNhZW0CMTEAAaZ4ZLMSzm8w7nnD1P0_ysQSWJLsf6jJOFFS5Rms2EvjNi3WssgOxWJUP-M_aem_cU1mie6Sq-CgyKOrMjMVBw" style="margin-left: 5px; color: inherit; text-decoration: none; white-space: nowrap;">
-                    WhatsApp: (14) 3282-4736
+                    WhatsApp: (14) 99734-8607
                 </a>
             </div>
         </div>
@@ -383,6 +388,9 @@
             </a>
             <a href="https://youtube.com/@conectmaxduartinasp?si=A9gTfGYVSYhcho9_" target="_blank" style="color: inherit;">
                 <i class="bi bi-youtube" style="font-size: 24px;"></i>
+            </a>
+                        <a href="https://api.whatsapp.com/send/?phone=5514997348607&type=phone_number&app_absent=0&fbclid=PAZXh0bgNhZW0CMTEAAaZ4ZLMSzm8w7nnD1P0_ysQSWJLsf6jJOFFS5Rms2EvjNi3WssgOxWJUP-M_aem_cU1mie6Sq-CgyKOrMjMVBw" target="_blank" style="color: inherit;">
+                <i class="bi bi-whatsapp" style="font-size: 24px;"></i>
             </a>
         </div>
     </div>
