--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-6 d-flex flex-column justify-content-center">
-          <h1 data-aos="fade-up" style="color: white; font-size: 39px;">A <span style="color: #ffa500;">MELHOR</span>   INTERNET FIBRA ÓTICA PARA DUARTNA e REGIÃO</h1>
+          <h1 data-aos="fade-up" style="color: white; font-size: 39px;">A <span style="color: #ffa500;">MELHOR</span> <br>  INTERNET <span style="color: #ffa500;">FIBRA</span>  ÓTICA <br> PARA <span style="color: #ffa500;">DUARTINA</span> E REGIÃO</h1>
           <br>
           <div data-aos="fade-up" data-aos-delay="600">
             <div class="text-center text-lg-start">
@@ -93,8 +93,13 @@
         <header class="section-header">
           <h1 style="color: #0b61af; font-weight: bold;">CONHEÇA NOSSOS <span style="color: #ffa500;">NOVOS  PLANOS, <br></span>INTERNET FIBRA RÁPIDA  COM QUALIDADE,<br> QUE CABE NO  SEU BOLSO! </h1>
         </header>
+        
+      
+    </div>
 </section><!-- End Values Section -->
 
+
+<style></style>
    <section id="servicos" class="services" style="background-color: #0b61af;">
 
       <div class="container" data-aos="fade-up">
